--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,17 @@ msbuild.wrn
 
 # Visual Studio 2015
 .vs/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+*/node_modules
+*/.pnp
+.pnp.js
+
+# testing
+*/coverage
+
+# production
+*/build
+
